--- a/index.html
+++ b/index.html
@@ -391,23 +391,27 @@
                 </div>
                 <form name="form-comunication" class="modal-form">
                     <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
-                    <label>
-                        <span class="label-span">Ім'я</span>
-                        <input name="user-name" type="text" class="modal-input" />
-                    </label>
-                    <label>
-                        <span class="label-span">Телефон</span>
-                        <input name="user-tel" type="tel" class="modal-input" />
-                    </label>
-                    <label>
-                        <span class="label-span">Пошта</span>
-                        <input name="user-mail" type="email" class="modal-input" />
-                    </label>
-                    
+                    <div class="input-line">
+                        <label>
+                            <span class="label-span">Ім'я</span>
+                            <input name="user-name" type="text" class="modal-input" />
+                        </label>
+                        <label>
+                            <span class="label-span">Телефон</span>
+                            <input name="user-tel" type="tel" class="modal-input" />
+                        </label>
+                        <label>
+                            <span class="label-span">Пошта</span>
+                            <input name="user-mail" type="email" class="modal-input" />
+                        </label>
+                        <label>
+                            <span class="label-span">Коментар</span></label>
+                        <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
+                    </div>
                     <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
-            </div>
-        </div>
+                </div>
+                </div>
         <script src="./js/modal.js"></script>
         </body>
         
