--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@
                             <span class="label-span">Коментар</span></label>
                         <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
                     </div>
+                    <label>
+                        <input type="checkbox" name="checkbox" class="checkbox-frame" checked />
+                    <label for="checkbox">Погоджуюся з розсилкою та приймаю 
+                        <span class="contract">Умови договору</span></label>
                     <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
                 </div>
