--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
         </footer>
         <div class="modal-backdrop is-hidden" data-modal>
             <div class="modal">
-                <div class="close-modal" data-modal-close><a href="#">
-                        <svg class="close" width="18" height="18">
+                <div class="close-modal" data-modal-close>
+                    <a href="#"><svg class="close" width="18" height="18">
                             <use href="./images/icons.svg#icon-close"></use>
                         </svg>
                     </a>
@@ -392,26 +392,42 @@
                 <form name="form-comunication" class="modal-form">
                     <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
                     <div class="input-line">
-                        <label>
-                            <span class="label-span">Ім'я</span>
+                        <label for="user-name" class="modal-label">Ім'я</label>
+                        <div class="input-wrapper">
                             <input name="user-name" type="text" class="modal-input" />
-                        </label>
-                        <label>
-                            <span class="label-span">Телефон</span>
+                            <svg class="input-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-person"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="input-line">
+                        <label for="user-tel" class="modal-label">Телефон</label>
+                        <div class="input-wrapper">
                             <input name="user-tel" type="tel" class="modal-input" />
-                        </label>
-                        <label>
-                            <span class="label-span">Пошта</span>
+                            <svg class="input-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="input-line">
+                        <label for="user-mail" class="modal-label">Пошта</label>
+                        <div class="input-wrapper">
                             <input name="user-mail" type="email" class="modal-input" />
-                        </label>
-                        <label>
-                            <span class="label-span">Коментар</span></label>
-                        <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
+                            <svg class="input-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-email"></use>
+                            </svg>
+                            </label>
+                        </div>
                     </div>
                     <label>
-                        <input type="checkbox" name="checkbox" class="checkbox-frame" checked />
-                    <label for="checkbox">Погоджуюся з розсилкою та приймаю 
-                        <span class="contract">Умови договору</span></label>
+                        <label for="user-text" class="modal-label">Коментар</label>
+                    <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
+                        <svg class="icon-check" width="16" height="16">
+                            <use href="./images/icons.svg#icon-check"></use>
+                        </svg>
+                      <a href="#" class="text-checkbox">Погоджуюся з розсилкою та приймаю<span class="conditions-link">
+                  Умови договору</span></a>
                     <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
                 </div>
