--- a/index.html
+++ b/index.html
@@ -420,14 +420,20 @@
                             </label>
                         </div>
                     </div>
-                    <label>
                         <label for="user-text" class="modal-label">Коментар</label>
-                    <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
-                        <svg class="icon-check" width="16" height="16">
-                            <use href="./images/icons.svg#icon-check"></use>
-                        </svg>
-                      <a href="#" class="text-checkbox">Погоджуюся з розсилкою та приймаю<span class="conditions-link">
-                  Умови договору</span></a>
+                        <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
+                        <div class="input-line check-line">
+                            <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
+                            <label for="checkbox-agree" class="checkbox-agree">
+                                <span class="icon-wrapper">
+                                    <svg class="icon-check" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-check"></use>
+                                    </svg>
+                                </span>
+                                <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
+                                        class="text-checkbox">
+                                        <span class="conditions-link">Умови договору</span></a></label>
+                        </div>
                     <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
                 </div>
