--- a/index.html
+++ b/index.html
@@ -378,6 +378,15 @@
                     </a>
                 </li>
             </ul>
+            <div class="footer-form">
+                <h3 class="footer-title">Підпишіться на розсилку</h3>
+                <input name="footer-mail" type="email" class="footer-input" placeholder="E-mail">
+                <button type="submit" class="button-primary button-footer"> Підписатися</button>
+                <svg class="input-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+
+            </div>
         </div>
         </div>
         </footer>
@@ -420,20 +429,20 @@
                             </label>
                         </div>
                     </div>
-                        <label for="user-text" class="modal-label">Коментар</label>
-                        <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
-                        <div class="input-line check-line">
-                            <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
-                            <label for="checkbox-agree" class="checkbox-agree">
-                                <span class="icon-wrapper">
-                                    <svg class="icon-check" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-check"></use>
-                                    </svg>
-                                </span>
-                                <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
-                                        class="text-checkbox">
-                                        <span class="conditions-link">Умови договору</span></a></label>
-                        </div>
+                    <label for="user-text" class="modal-label">Коментар</label>
+                    <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
+                    <div class="input-line check-line">
+                        <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
+                        <label for="checkbox-agree" class="checkbox-agree">
+                            <span class="icon-wrapper">
+                                <svg class="icon-check" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-check"></use>
+                                </svg>
+                            </span>
+                            <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
+                                    class="text-checkbox">
+                                    <span class="conditions-link">Умови договору</span></a></label>
+                    </div>
                     <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
                 </div>
