--- a/index.html
+++ b/index.html
@@ -378,16 +378,19 @@
                     </a>
                 </li>
             </ul>
-            <div class="footer-form">
-                <h3 class="footer-title">Підпишіться на розсилку</h3>
-                <input name="footer-mail" type="email" class="footer-input" placeholder="E-mail">
-                <button type="submit" class="button-primary button-footer"> Підписатися</button>
-                <svg class="input-icon" width="18" height="18">
-                    <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-
-            </div>
         </div>
+        <div class="footer-form">
+            <h3 class="footer-title">Підпишіться на розсилку</h3>
+            <div class="footer-buttons">
+            <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
+            <span class="icon-wrapper">
+            <button type="submit" class="button-primary button-footer">Підписатися<svg class="icon-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+            </span>
+            </button>
+            </div>
+            </div>
         </div>
         </footer>
         <div class="modal-backdrop is-hidden" data-modal>
