--- a/index.html
+++ b/index.html
@@ -382,15 +382,16 @@
         <div class="footer-form">
             <h3 class="footer-title">Підпишіться на розсилку</h3>
             <div class="footer-buttons">
-            <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
-            <span class="icon-wrapper">
-            <button type="submit" class="button-primary button-footer">Підписатися<svg class="icon-send" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-            </svg>
-            </span>
-            </button>
+                <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
+                <span class="icon-wrapper">
+                    <button type="submit" class="button-primary button-footer">Підписатися<svg class="icon-send" width="24"
+                            height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                </span>
+                </button>
             </div>
-            </div>
+        </div>
         </div>
         </footer>
         <div class="modal-backdrop is-hidden" data-modal>
@@ -435,7 +436,8 @@
                     <label for="user-text" class="modal-label">Коментар</label>
                     <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
                     <div class="input-line check-line">
-                        <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
+                        <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox"
+                            class="visually-hidden" />
                         <label for="checkbox-agree" class="checkbox-agree">
                             <span class="icon-wrapper">
                                 <svg class="icon-check" width="16" height="16">
@@ -448,8 +450,8 @@
                     </div>
                     <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
-                </div>
-                </div>
+            </div>
+        </div>
         <script src="./js/modal.js"></script>
         </body>
         
