--- a/portfolio.html
+++ b/portfolio.html
@@ -252,7 +252,19 @@
           </li>
         </ul>
       </div>
-    </div>
+      <div class="footer-form">
+        <h3 class="footer-title">Підпишіться на розсилку</h3>
+        <div class="footer-buttons">
+          <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
+          <span class="icon-wrapper">
+            <button type="submit" class="button-primary button-footer">Підписатися<svg class="icon-send" width="24"
+                height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+          </span>
+          </button>
+        </div>
+      </div>
   </footer>
   </body>
 
