--- a/index.html
+++ b/index.html
@@ -396,12 +396,11 @@
         </footer>
         <div class="modal-backdrop is-hidden" data-modal>
             <div class="modal">
-                <div class="close-modal" data-modal-close>
-                    <a href="#"><svg class="close" width="18" height="18">
+                <button type="submit" class="close-modal" data-modal-close>
+                    <svg class="close" width="18" height="18">
                             <use href="./images/icons.svg#icon-close"></use>
                         </svg>
-                    </a>
-                </div>
+                </button>
                 <form name="form-comunication" class="modal-form">
                     <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
                     <div class="input-line">
