--- a/index.html
+++ b/index.html
@@ -334,124 +334,123 @@
     <footer class="page-footer">
         <div class="container foter-conect">
             <div>
-            <a href="./index.html" class="logo-blue">Web<span class="logo-white">Studio</span></a>
-            <address>
-                <ul class="footer-link-end link">
-                    <li>
-                        <p class="footer-addres">м. Київ, пр-т Лесі Українки, 26</p>
+                <a href="./index.html" class="logo-blue">Web<span class="logo-white">Studio</span></a>
+                <address>
+                    <ul class="footer-link-end link">
+                        <li>
+                            <p class="footer-addres">м. Київ, пр-т Лесі Українки, 26</p>
+                        </li>
+                        <li><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li><a class="footer-tel-link link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-end">
+                <h3 class="footer-title">приєднуйтесь</h3>
+                <ul class="social-icons-footer list">
+                    <li class="social-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="social-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li><a class="footer-tel-link link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                    <li class="social-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
-        </div>
-        <div class="footer-end">
-            <h3 class="footer-title">приєднуйтесь</h3>
-            <ul class="social-icons-footer list">
-                <li class="social-item">
-                    <a href="#" class="social-link link">
-                        <svg class="social-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="social-item">
-                    <a href="#" class="social-link link">
-                        <svg class="social-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="social-item">
-                    <a href="#" class="social-link link">
-                        <svg class="social-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="social-item">
-                    <a href="#" class="social-link link">
-                        <svg class="social-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer-form">
-            <h3 class="footer-title">Підпишіться на розсилку</h3>
-            <div class="footer-buttons">
-                <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
-                <span class="icon-wrapper">
+            </div>
+            <form name="form-comunication" class="footer-modal-form"></form>
+            <div class="footer-form">
+                <h3 class="footer-title">Підпишіться на розсилку</h3>
+                <div class="footer-buttons">
+                    <label><input name="footer-mail" type="email" class="footer-input" placeholder="E-mail"></label>
                     <button type="submit" class="button-primary button-footer">Підписатися<svg class="icon-send" width="24"
                             height="24">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
-                </span>
-                </button>
+                    </button>
+                </div>
             </div>
         </div>
-        </div>
-        </footer>
-        <div class="modal-backdrop is-hidden" data-modal>
-            <div class="modal">
-                <button type="submit" class="close-modal" data-modal-close>
-                    <svg class="close" width="18" height="18">
-                            <use href="./images/icons.svg#icon-close"></use>
+        </form>
+    </footer>
+    <div class="modal-backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="submit" class="close-modal" data-modal-close>
+                <svg class="close" width="18" height="18">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <form name="form-comunication" class="modal-form">
+                <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
+                <div class="input-line">
+                    <label for="user-name" class="modal-label">Ім'я</label>
+                    <div class="input-wrapper">
+                        <input name="user-name" type="text" class="modal-input" />
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person"></use>
                         </svg>
-                </button>
-                <form name="form-comunication" class="modal-form">
-                    <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
-                    <div class="input-line">
-                        <label for="user-name" class="modal-label">Ім'я</label>
-                        <div class="input-wrapper">
-                            <input name="user-name" type="text" class="modal-input" />
-                            <svg class="input-icon" width="18" height="18">
-                                <use href="./images/icons.svg#icon-person"></use>
+                    </div>
+                </div>
+                <div class="input-line">
+                    <label for="user-tel" class="modal-label">Телефон</label>
+                    <div class="input-wrapper">
+                        <input name="user-tel" type="tel" class="modal-input" />
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                        </label>
+                    </div>
+                </div>
+                <div class="input-line">
+                    <label for="user-mail" class="modal-label">Пошта</label>
+                    <div class="input-wrapper">
+                        <input name="user-mail" type="email" class="modal-input" />
+                        <svg class="input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                        </label>
+                    </div>
+                </div>
+                <label for="user-text" class="modal-label">Коментар</label>
+                <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
+                <div class="input-line check-line">
+                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox"
+                        class="visually-hidden" />
+                    <label for="checkbox-agree" class="checkbox-agree">
+                        <span class="icon-wrapper">
+                            <svg class="icon-check" width="16" height="16">
+                                <use href="./images/icons.svg#icon-check"></use>
                             </svg>
-                        </div>
-                    </div>
-                    <div class="input-line">
-                        <label for="user-tel" class="modal-label">Телефон</label>
-                        <div class="input-wrapper">
-                            <input name="user-tel" type="tel" class="modal-input" />
-                            <svg class="input-icon" width="18" height="18">
-                                <use href="./images/icons.svg#icon-phone"></use>
-                            </svg>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="input-line">
-                        <label for="user-mail" class="modal-label">Пошта</label>
-                        <div class="input-wrapper">
-                            <input name="user-mail" type="email" class="modal-input" />
-                            <svg class="input-icon" width="18" height="18">
-                                <use href="./images/icons.svg#icon-email"></use>
-                            </svg>
-                            </label>
-                        </div>
-                    </div>
-                    <label for="user-text" class="modal-label">Коментар</label>
-                    <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
-                    <div class="input-line check-line">
-                        <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox"
-                            class="visually-hidden" />
-                        <label for="checkbox-agree" class="checkbox-agree">
-                            <span class="icon-wrapper">
-                                <svg class="icon-check" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-check"></use>
-                                </svg>
-                            </span>
-                            <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
-                                    class="text-checkbox">
-                                    <span class="conditions-link">Умови договору</span></a></label>
-                    </div>
-                    <button type="submit" class="button-primary button-form">Відправити</button>
-                </form>
-            </div>
+                        </span>
+                        <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
+                                class="text-checkbox">
+                                <span class="conditions-link">Умови договору</span></a></label>
+                </div>
+                <button type="submit" class="button-primary button-form">Відправити</button>
+            </form>
         </div>
-        <script src="./js/modal.js"></script>
-        </body>
-        
-        </html>
+    </div>
+    <script src="./js/modal.js"></script>
+    </body>
+    </html>
