--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
                     </button>
                 </div>
             </div>
-        </div>
-        </form>
+            </form>
+            </div>
     </footer>
     <div class="modal-backdrop is-hidden" data-modal>
         <div class="modal">
@@ -406,7 +406,7 @@
                 <div class="input-line">
                     <label for="user-name" class="modal-label">Ім'я</label>
                     <div class="input-wrapper">
-                        <input name="user-name" type="text" class="modal-input" />
+                        <input name="user-name" id="user-name" type="text" class="modal-input"/>
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
@@ -415,40 +415,39 @@
                 <div class="input-line">
                     <label for="user-tel" class="modal-label">Телефон</label>
                     <div class="input-wrapper">
-                        <input name="user-tel" type="tel" class="modal-input" />
+                        <input name="user-tel" id="user-tel" type="tel" class="modal-input"/>
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
-                        </label>
                     </div>
+                    </label>
                 </div>
                 <div class="input-line">
                     <label for="user-mail" class="modal-label">Пошта</label>
                     <div class="input-wrapper">
-                        <input name="user-mail" type="email" class="modal-input" />
+                        <input name="user-mail" id="user-mail" type="email" class="modal-input" />
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
-                        </label>
                     </div>
+                    </label>
                 </div>
                 <label for="user-text" class="modal-label">Коментар</label>
                 <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
                 <div class="input-line check-line">
-                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox"
-                        class="visually-hidden" />
+                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
                     <label for="checkbox-agree" class="checkbox-agree">
                         <span class="icon-wrapper">
                             <svg class="icon-check" width="16" height="16">
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
-                                class="text-checkbox">
-                                <span class="conditions-link">Умови договору</span></a></label>
+                        <a href="#" class="text-checkbox">Погоджуюся з розсилкою та приймаю</a><a href="#" class="text-checkbox">
+                            <span class="conditions-link">Умови договору</span></a>
+                    </label>
                 </div>
                 <button type="submit" class="button-primary button-form">Відправити</button>
-            </form>
+                </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
