--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     </li>
                 </ul>
             </div>
-            <form name="form-comunication" class="footer-modal-form"></form>
+            <form name="form-comunication" class="footer-modal-form">
             <div class="footer-form">
                 <h3 class="footer-title">Підпишіться на розсилку</h3>
                 <div class="footer-buttons">
@@ -406,7 +406,7 @@
                 <div class="input-line">
                     <label for="user-name" class="modal-label">Ім'я</label>
                     <div class="input-wrapper">
-                        <input name="user-name" id="user-name" type="text" class="modal-input"/>
+                        <input name="user-name" id="user-name" type="text" class="modal-input" />
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
@@ -415,12 +415,11 @@
                 <div class="input-line">
                     <label for="user-tel" class="modal-label">Телефон</label>
                     <div class="input-wrapper">
-                        <input name="user-tel" id="user-tel" type="tel" class="modal-input"/>
+                        <input name="user-tel" id="user-tel" type="tel" class="modal-input" />
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
-                    </label>
                 </div>
                 <div class="input-line">
                     <label for="user-mail" class="modal-label">Пошта</label>
@@ -430,12 +429,11 @@
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
-                    </label>
                 </div>
                 <label for="user-text" class="modal-label">Коментар</label>
                 <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
                 <div class="input-line check-line">
-                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
+                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden"/>
                     <label for="checkbox-agree" class="checkbox-agree">
                         <span class="icon-wrapper">
                             <svg class="icon-check" width="16" height="16">
