--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     </head>
 <body>
@@ -406,7 +406,7 @@
                 <div class="input-line">
                     <label for="user-name" class="modal-label">Ім'я</label>
                     <div class="input-wrapper">
-                        <input name="user-name" id="user-name" type="text" class="modal-input" />
+                        <input name="user-name" id="user-name" type="text" class="modal-input"/>
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
@@ -415,7 +415,7 @@
                 <div class="input-line">
                     <label for="user-tel" class="modal-label">Телефон</label>
                     <div class="input-wrapper">
-                        <input name="user-tel" id="user-tel" type="tel" class="modal-input" />
+                        <input name="user-tel" id="user-tel" type="tel" class="modal-input"/>
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
@@ -424,7 +424,7 @@
                 <div class="input-line">
                     <label for="user-mail" class="modal-label">Пошта</label>
                     <div class="input-wrapper">
-                        <input name="user-mail" id="user-mail" type="email" class="modal-input" />
+                        <input name="user-mail" id="user-mail" type="email" class="modal-input"/>
                         <svg class="input-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
@@ -433,7 +433,7 @@
                 <label for="user-text" class="modal-label">Коментар</label>
                 <textarea name="user-text" id="user-text" placeholder="Введіть текст" class="modal-textarea"></textarea>
                 <div class="input-line check-line">
-                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden"/>
+                    <input id="checkbox-agree" value="agree" name="checkbox-agree" type="checkbox" class="visually-hidden" />
                     <label for="checkbox-agree" class="checkbox-agree">
                         <span class="icon-wrapper">
                             <svg class="icon-check" width="16" height="16">
