--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        <a href="#" class="text-checkbox">Погоджуюся з розсилкою та приймаю</a><a href="#" class="text-checkbox">
-                            <span class="conditions-link">Умови договору</span></a>
+                        <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#" class="text-checkbox">
+                            <span class="conditions-link">Умови договору</span></a></label>
                     </label>
                 </div>
                 <button type="submit" class="button-primary button-form">Відправити</button>
