--- a/index.html
+++ b/index.html
@@ -440,7 +440,8 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        Погоджуюся з розсилкою та приймаю <a href="#" class="text-checkbox">
+                    </label>
+                        <label for="checkbox-agree"class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#" class="text-checkbox">
                             <span class="conditions-link">Умови договору</span></a>
                     </label>
                     </div>
