--- a/index.html
+++ b/index.html
@@ -440,8 +440,9 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                       <p class="text-checkbox">Погоджуюся з розсилкою та приймаю&nbsp</p><a href="#" class="text-checkbox">
-                            <span class="conditions-link">Умови договору</span></a></label>
+                        <p class="text-checkbox">Погоджуюся з розсилкою та приймаю&nbsp</p><a href="#" class="text-checkbox">
+                            <span class="conditions-link">Умови договору</span></a>
+                    </label>
                 </div>
                 <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
